// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`legacy v2 compat snapshots > matches the golden legacy mapper debug envelope output 1`] = `
[
  {
    "sourceId": "citation-1",
    "storageData": {
      "authorityStatus": "none",
      "confidenceScore": 51,
      "convertedText": "McCoy, L. G., Banja, J. D., Ghassemi, M., & Celi, L. A. (2020). Ensuring machine learning for healthcare works for all. BMJ Health & Care Informatics, 27(3).",
      "inputStyle": "auto",
      "originalText": "Example raw citation",
      "outputStyle": "apa",
      "parsedData": {
        "article-number": undefined,
        "authors": [
          "McCoy, L. G.",
        ],
        "bookTitle": undefined,
        "conferenceTitle": undefined,
        "doi": undefined,
        "edition": undefined,
        "editor": undefined,
        "editors": undefined,
        "institution": undefined,
        "issue": "3",
        "journal": "BMJ Health & Care Informatics",
        "pages": undefined,
        "placeOfPublication": undefined,
        "publisher": undefined,
        "repository": undefined,
        "thesisType": undefined,
        "title": "Ensuring machine learning for healthcare works for all",
        "url": undefined,
        "volume": "27",
        "year": "2020",
      },
      "referenceType": "journal",
      "workKey": "cdd01ab3e3e4154a1612f085",
    },
    "uiData": {
      "adminReview": {
        "debug": {
          "detectedStyle": "unknown",
          "extractionPath": "llm",
          "fallbacksUsed": [
            "split:fallback",
            "extract:fallback",
            "llm_cap_reached",
          ],
          "splitConfidence": 0.67,
          "splitMethod": "llm",
        },
        "engineSnapshot": {
          "engineVersion": "v2",
          "extractorPath": "llm",
          "processingPath": {
            "extractorPathsUsed": [
              "deterministic",
            ],
            "fallbacksUsed": [],
            "partialReasons": undefined,
            "partialResult": false,
            "stagesRun": [
              "ingest",
              "split",
              "detect",
              "extract",
              "validate",
              "normalize",
              "score",
              "render",
              "respond",
            ],
          },
          "qualityFlags": [
            "review",
          ],
          "splitContaminationFlags": undefined,
          "stageLogSummary": undefined,
          "truthProvenance": {
            "truthApplied": false,
          },
          "validationCodes": undefined,
        },
        "warnings": [],
      },
      "analyticsPayload": {
        "authorityStatus": "none",
        "confidenceScore": 51,
        "engineVersion": "v2",
        "extractorPath": "llm",
        "healthState": "review",
        "partialResult": false,
        "styleDetectionFailed": true,
        "truthApplied": false,
        "warningCount": 0,
      },
      "assertionHighlights": undefined,
      "assertionSummary": undefined,
      "authorInitialsOnly": true,
      "authorityData": undefined,
      "authorityStatus": "none",
      "confidence": {
        "breakdown": {
          "rules": 51,
        },
        "isSuspicious": false,
        "score": 51,
      },
      "convertedText": "McCoy, L. G., Banja, J. D., Ghassemi, M., & Celi, L. A. (2020). Ensuring machine learning for healthcare works for all. BMJ Health & Care Informatics, 27(3).",
      "debug": {
        "detectedStyle": "unknown",
        "extractionPath": "llm",
        "fallbacksUsed": [
          "split:fallback",
          "extract:fallback",
          "llm_cap_reached",
        ],
        "splitConfidence": 0.67,
        "splitMethod": "llm",
      },
      "exportPayload": {
        "convertedText": "McCoy, L. G., Banja, J. D., Ghassemi, M., & Celi, L. A. (2020). Ensuring machine learning for healthcare works for all. BMJ Health & Care Informatics, 27(3).",
        "outputStyle": "apa",
        "parsedData": {
          "article-number": undefined,
          "authors": [
            "McCoy, L. G.",
          ],
          "bookTitle": undefined,
          "conferenceTitle": undefined,
          "doi": undefined,
          "edition": undefined,
          "editor": undefined,
          "editors": undefined,
          "institution": undefined,
          "issue": "3",
          "journal": "BMJ Health & Care Informatics",
          "pages": undefined,
          "placeOfPublication": undefined,
          "publisher": undefined,
          "repository": undefined,
          "thesisType": undefined,
          "title": "Ensuring machine learning for healthcare works for all",
          "url": undefined,
          "volume": "27",
          "year": "2020",
        },
        "referenceType": "journal",
        "workKey": undefined,
      },
      "healthReasons": [
        "Validation or rendering warnings are present",
      ],
      "healthState": "review",
      "id": "",
      "inputStyle": "auto",
      "originalText": "Example raw citation",
      "outputStyle": "apa",
      "parsedData": {
        "article-number": undefined,
        "authors": [
          "McCoy, L. G.",
        ],
        "bookTitle": undefined,
        "conferenceTitle": undefined,
        "doi": undefined,
        "edition": undefined,
        "editor": undefined,
        "editors": undefined,
        "institution": undefined,
        "issue": "3",
        "journal": "BMJ Health & Care Informatics",
        "pages": undefined,
        "placeOfPublication": undefined,
        "publisher": undefined,
        "repository": undefined,
        "thesisType": undefined,
        "title": "Ensuring machine learning for healthcare works for all",
        "url": undefined,
        "volume": "27",
        "year": "2020",
      },
      "referenceType": "journal",
      "reportEngineSnapshot": {
        "engineVersion": "v2",
        "extractorPath": "llm",
        "processingPath": {
          "extractorPathsUsed": [
            "deterministic",
          ],
          "fallbacksUsed": [],
          "partialReasons": undefined,
          "partialResult": false,
          "stagesRun": [
            "ingest",
            "split",
            "detect",
            "extract",
            "validate",
            "normalize",
            "score",
            "render",
            "respond",
          ],
        },
        "qualityFlags": [
          "review",
        ],
        "splitContaminationFlags": undefined,
        "stageLogSummary": undefined,
        "truthProvenance": {
          "truthApplied": false,
        },
        "validationCodes": undefined,
      },
      "review": {
        "assertionHighlights": undefined,
        "assertionSummary": undefined,
        "authorInitialsOnly": true,
        "authorityStatus": "none",
        "confidence": {
          "breakdown": {
            "rules": 51,
          },
          "isSuspicious": false,
          "score": 51,
        },
        "healthReasons": [
          "Validation or rendering warnings are present",
        ],
        "healthState": "review",
        "styleDetectionFailed": true,
        "truthProvenance": {
          "truthApplied": false,
        },
      },
      "styleDetectionFailed": true,
      "truthProvenance": {
        "truthApplied": false,
      },
      "warnings": [],
    },
  },
]
`;

exports[`legacy v2 compat snapshots > matches the golden legacy mapper output for representative non-debug records 1`] = `
[
  {
    "sourceId": "citation-1",
    "storageData": {
      "authorityStatus": "none",
      "confidenceScore": 71,
      "convertedText": "McCoy, L. G., Banja, J. D., Ghassemi, M., & Celi, L. A. (2020). Ensuring machine learning for healthcare works for all. BMJ Health & Care Informatics, 27(3).",
      "inputStyle": "apa",
      "originalText": "Example raw citation",
      "outputStyle": "apa",
      "parsedData": {
        "article-number": undefined,
        "authors": [
          "McCoy, L. G.",
        ],
        "bookTitle": undefined,
        "conferenceTitle": undefined,
        "doi": undefined,
        "edition": undefined,
        "editor": undefined,
        "editors": undefined,
        "institution": undefined,
        "issue": "3",
        "journal": "BMJ Health & Care Informatics",
        "pages": undefined,
        "placeOfPublication": undefined,
        "publisher": undefined,
        "repository": undefined,
        "thesisType": undefined,
        "title": "Ensuring machine learning for healthcare works for all",
        "url": undefined,
        "volume": "27",
        "year": "2020",
      },
      "referenceType": "journal",
      "workKey": "cdd01ab3e3e4154a1612f085",
    },
    "uiData": {
      "adminReview": {
        "debug": undefined,
        "engineSnapshot": {
          "engineVersion": "v2",
          "extractorPath": "deterministic",
          "processingPath": {
            "partialReasons": undefined,
            "partialResult": false,
          },
          "qualityFlags": [
            "review",
          ],
          "splitContaminationFlags": undefined,
          "stageLogSummary": undefined,
          "truthProvenance": {
            "truthApplied": false,
          },
          "validationCodes": undefined,
        },
        "warnings": [],
      },
      "analyticsPayload": {
        "authorityStatus": "none",
        "confidenceScore": 71,
        "engineVersion": "v2",
        "extractorPath": "deterministic",
        "healthState": "review",
        "partialResult": false,
        "styleDetectionFailed": false,
        "truthApplied": false,
        "warningCount": 0,
      },
      "assertionHighlights": undefined,
      "assertionSummary": undefined,
      "authorInitialsOnly": true,
      "authorityData": undefined,
      "authorityStatus": "none",
      "confidence": {
        "breakdown": {
          "rules": 71,
        },
        "isSuspicious": false,
        "score": 71,
      },
      "convertedText": "McCoy, L. G., Banja, J. D., Ghassemi, M., & Celi, L. A. (2020). Ensuring machine learning for healthcare works for all. BMJ Health & Care Informatics, 27(3).",
      "debug": undefined,
      "exportPayload": {
        "convertedText": "McCoy, L. G., Banja, J. D., Ghassemi, M., & Celi, L. A. (2020). Ensuring machine learning for healthcare works for all. BMJ Health & Care Informatics, 27(3).",
        "outputStyle": "apa",
        "parsedData": {
          "article-number": undefined,
          "authors": [
            "McCoy, L. G.",
          ],
          "bookTitle": undefined,
          "conferenceTitle": undefined,
          "doi": undefined,
          "edition": undefined,
          "editor": undefined,
          "editors": undefined,
          "institution": undefined,
          "issue": "3",
          "journal": "BMJ Health & Care Informatics",
          "pages": undefined,
          "placeOfPublication": undefined,
          "publisher": undefined,
          "repository": undefined,
          "thesisType": undefined,
          "title": "Ensuring machine learning for healthcare works for all",
          "url": undefined,
          "volume": "27",
          "year": "2020",
        },
        "referenceType": "journal",
        "workKey": undefined,
      },
      "healthReasons": [
        "Validation or rendering warnings are present",
      ],
      "healthState": "review",
      "id": "",
      "inputStyle": "apa",
      "originalText": "Example raw citation",
      "outputStyle": "apa",
      "parsedData": {
        "article-number": undefined,
        "authors": [
          "McCoy, L. G.",
        ],
        "bookTitle": undefined,
        "conferenceTitle": undefined,
        "doi": undefined,
        "edition": undefined,
        "editor": undefined,
        "editors": undefined,
        "institution": undefined,
        "issue": "3",
        "journal": "BMJ Health & Care Informatics",
        "pages": undefined,
        "placeOfPublication": undefined,
        "publisher": undefined,
        "repository": undefined,
        "thesisType": undefined,
        "title": "Ensuring machine learning for healthcare works for all",
        "url": undefined,
        "volume": "27",
        "year": "2020",
      },
      "referenceType": "journal",
      "reportEngineSnapshot": {
        "engineVersion": "v2",
        "extractorPath": "deterministic",
        "processingPath": {
          "partialReasons": undefined,
          "partialResult": false,
        },
        "qualityFlags": [
          "review",
        ],
        "splitContaminationFlags": undefined,
        "stageLogSummary": undefined,
        "truthProvenance": {
          "truthApplied": false,
        },
        "validationCodes": undefined,
      },
      "review": {
        "assertionHighlights": undefined,
        "assertionSummary": undefined,
        "authorInitialsOnly": true,
        "authorityStatus": "none",
        "confidence": {
          "breakdown": {
            "rules": 71,
          },
          "isSuspicious": false,
          "score": 71,
        },
        "healthReasons": [
          "Validation or rendering warnings are present",
        ],
        "healthState": "review",
        "styleDetectionFailed": false,
        "truthProvenance": {
          "truthApplied": false,
        },
      },
      "styleDetectionFailed": false,
      "truthProvenance": {
        "truthApplied": false,
      },
      "warnings": [],
    },
  },
  {
    "sourceId": "citation-2",
    "storageData": {
      "authorityStatus": "none",
      "confidenceScore": 42,
      "convertedText": "McCoy, L. G., Banja, J. D., Ghassemi, M., & Celi, L. A. (2020). Ensuring machine learning for healthcare works for all. BMJ Health & Care Informatics, 27(3).",
      "inputStyle": "apa",
      "originalText": "Example raw citation",
      "outputStyle": "apa",
      "parsedData": {
        "article-number": undefined,
        "authors": [
          "McCoy, L. G.",
        ],
        "bookTitle": undefined,
        "conferenceTitle": undefined,
        "doi": undefined,
        "edition": undefined,
        "editor": undefined,
        "editors": undefined,
        "institution": undefined,
        "issue": "3",
        "journal": "BMJ Health & Care Informatics",
        "pages": undefined,
        "placeOfPublication": undefined,
        "publisher": undefined,
        "repository": undefined,
        "thesisType": undefined,
        "title": "Ensuring machine learning for healthcare works for all",
        "url": undefined,
        "volume": "27",
        "year": "2020",
      },
      "referenceType": "journal",
      "workKey": "cdd01ab3e3e4154a1612f085",
    },
    "uiData": {
      "adminReview": {
        "debug": undefined,
        "engineSnapshot": {
          "engineVersion": "v2",
          "extractorPath": "deterministic",
          "processingPath": {
            "partialReasons": undefined,
            "partialResult": false,
          },
          "qualityFlags": [
            "placeholder_fields",
            "review",
          ],
          "splitContaminationFlags": undefined,
          "stageLogSummary": undefined,
          "truthProvenance": {
            "truthApplied": false,
          },
          "validationCodes": [
            "placeholder_journal",
          ],
        },
        "warnings": [
          "warning:placeholder_journal",
        ],
      },
      "analyticsPayload": {
        "authorityStatus": "none",
        "confidenceScore": 42,
        "engineVersion": "v2",
        "extractorPath": "deterministic",
        "healthState": "review",
        "partialResult": false,
        "styleDetectionFailed": false,
        "truthApplied": false,
        "warningCount": 1,
      },
      "assertionHighlights": undefined,
      "assertionSummary": undefined,
      "authorInitialsOnly": true,
      "authorityData": undefined,
      "authorityStatus": "none",
      "confidence": {
        "breakdown": {
          "rules": 42,
        },
        "isSuspicious": false,
        "score": 42,
      },
      "convertedText": "McCoy, L. G., Banja, J. D., Ghassemi, M., & Celi, L. A. (2020). Ensuring machine learning for healthcare works for all. BMJ Health & Care Informatics, 27(3).",
      "debug": undefined,
      "exportPayload": {
        "convertedText": "McCoy, L. G., Banja, J. D., Ghassemi, M., & Celi, L. A. (2020). Ensuring machine learning for healthcare works for all. BMJ Health & Care Informatics, 27(3).",
        "outputStyle": "apa",
        "parsedData": {
          "article-number": undefined,
          "authors": [
            "McCoy, L. G.",
          ],
          "bookTitle": undefined,
          "conferenceTitle": undefined,
          "doi": undefined,
          "edition": undefined,
          "editor": undefined,
          "editors": undefined,
          "institution": undefined,
          "issue": "3",
          "journal": "BMJ Health & Care Informatics",
          "pages": undefined,
          "placeOfPublication": undefined,
          "publisher": undefined,
          "repository": undefined,
          "thesisType": undefined,
          "title": "Ensuring machine learning for healthcare works for all",
          "url": undefined,
          "volume": "27",
          "year": "2020",
        },
        "referenceType": "journal",
        "workKey": undefined,
      },
      "healthReasons": [
        "Placeholder or suspicious venue fields present",
      ],
      "healthState": "review",
      "id": "",
      "inputStyle": "apa",
      "originalText": "Example raw citation",
      "outputStyle": "apa",
      "parsedData": {
        "article-number": undefined,
        "authors": [
          "McCoy, L. G.",
        ],
        "bookTitle": undefined,
        "conferenceTitle": undefined,
        "doi": undefined,
        "edition": undefined,
        "editor": undefined,
        "editors": undefined,
        "institution": undefined,
        "issue": "3",
        "journal": "BMJ Health & Care Informatics",
        "pages": undefined,
        "placeOfPublication": undefined,
        "publisher": undefined,
        "repository": undefined,
        "thesisType": undefined,
        "title": "Ensuring machine learning for healthcare works for all",
        "url": undefined,
        "volume": "27",
        "year": "2020",
      },
      "referenceType": "journal",
      "reportEngineSnapshot": {
        "engineVersion": "v2",
        "extractorPath": "deterministic",
        "processingPath": {
          "partialReasons": undefined,
          "partialResult": false,
        },
        "qualityFlags": [
          "placeholder_fields",
          "review",
        ],
        "splitContaminationFlags": undefined,
        "stageLogSummary": undefined,
        "truthProvenance": {
          "truthApplied": false,
        },
        "validationCodes": [
          "placeholder_journal",
        ],
      },
      "review": {
        "assertionHighlights": undefined,
        "assertionSummary": undefined,
        "authorInitialsOnly": true,
        "authorityStatus": "none",
        "confidence": {
          "breakdown": {
            "rules": 42,
          },
          "isSuspicious": false,
          "score": 42,
        },
        "healthReasons": [
          "Placeholder or suspicious venue fields present",
        ],
        "healthState": "review",
        "styleDetectionFailed": false,
        "truthProvenance": {
          "truthApplied": false,
        },
      },
      "styleDetectionFailed": false,
      "truthProvenance": {
        "truthApplied": false,
      },
      "warnings": [
        "warning:placeholder_journal",
      ],
    },
  },
  {
    "sourceId": "citation-3",
    "storageData": {
      "authorityStatus": "none",
      "confidenceScore": 33,
      "convertedText": "McCoy, L. G., Banja, J. D., Ghassemi, M., & Celi, L. A. (2020). Ensuring machine learning for healthcare works for all. BMJ Health & Care Informatics, 27(3).",
      "inputStyle": "apa",
      "originalText": "Ronneberger, O., Fischer, P., and Brox, T. "U-Net: Convolutional Networks for Biomedical Image Segmentation."",
      "outputStyle": "apa",
      "parsedData": {
        "article-number": undefined,
        "authors": [
          "McCoy, L. G.",
        ],
        "bookTitle": undefined,
        "conferenceTitle": undefined,
        "doi": undefined,
        "edition": undefined,
        "editor": undefined,
        "editors": undefined,
        "institution": undefined,
        "issue": "3",
        "journal": "BMJ Health & Care Informatics",
        "pages": undefined,
        "placeOfPublication": undefined,
        "publisher": undefined,
        "repository": undefined,
        "thesisType": undefined,
        "title": "U-Convolutional Networks for Biomedical Image Segmentation",
        "url": undefined,
        "volume": "27",
        "year": "2020",
      },
      "referenceType": "journal",
      "workKey": "310db565884c2b7176b72980",
    },
    "uiData": {
      "adminReview": {
        "debug": undefined,
        "engineSnapshot": {
          "engineVersion": "v2",
          "extractorPath": "deterministic",
          "processingPath": {
            "partialReasons": undefined,
            "partialResult": false,
          },
          "qualityFlags": [
            "review",
            "protected_token_corruption",
          ],
          "splitContaminationFlags": undefined,
          "stageLogSummary": undefined,
          "truthProvenance": {
            "truthApplied": false,
          },
          "validationCodes": [
            "protected_title_token_corrupted",
          ],
        },
        "warnings": [
          "error:protected_title_token_corrupted",
        ],
      },
      "analyticsPayload": {
        "authorityStatus": "none",
        "confidenceScore": 33,
        "engineVersion": "v2",
        "extractorPath": "deterministic",
        "healthState": "action_needed",
        "partialResult": false,
        "styleDetectionFailed": false,
        "truthApplied": false,
        "warningCount": 1,
      },
      "assertionHighlights": undefined,
      "assertionSummary": undefined,
      "authorInitialsOnly": true,
      "authorityData": undefined,
      "authorityStatus": "none",
      "confidence": {
        "breakdown": {
          "rules": 33,
        },
        "isSuspicious": false,
        "score": 33,
      },
      "convertedText": "McCoy, L. G., Banja, J. D., Ghassemi, M., & Celi, L. A. (2020). Ensuring machine learning for healthcare works for all. BMJ Health & Care Informatics, 27(3).",
      "debug": undefined,
      "exportPayload": {
        "convertedText": "McCoy, L. G., Banja, J. D., Ghassemi, M., & Celi, L. A. (2020). Ensuring machine learning for healthcare works for all. BMJ Health & Care Informatics, 27(3).",
        "outputStyle": "apa",
        "parsedData": {
          "article-number": undefined,
          "authors": [
            "McCoy, L. G.",
          ],
          "bookTitle": undefined,
          "conferenceTitle": undefined,
          "doi": undefined,
          "edition": undefined,
          "editor": undefined,
          "editors": undefined,
          "institution": undefined,
          "issue": "3",
          "journal": "BMJ Health & Care Informatics",
          "pages": undefined,
          "placeOfPublication": undefined,
          "publisher": undefined,
          "repository": undefined,
          "thesisType": undefined,
          "title": "U-Convolutional Networks for Biomedical Image Segmentation",
          "url": undefined,
          "volume": "27",
          "year": "2020",
        },
        "referenceType": "journal",
        "workKey": undefined,
      },
      "healthReasons": [
        "Protected title or venue tokens were corrupted.",
      ],
      "healthState": "action_needed",
      "id": "",
      "inputStyle": "apa",
      "originalText": "Ronneberger, O., Fischer, P., and Brox, T. "U-Net: Convolutional Networks for Biomedical Image Segmentation."",
      "outputStyle": "apa",
      "parsedData": {
        "article-number": undefined,
        "authors": [
          "McCoy, L. G.",
        ],
        "bookTitle": undefined,
        "conferenceTitle": undefined,
        "doi": undefined,
        "edition": undefined,
        "editor": undefined,
        "editors": undefined,
        "institution": undefined,
        "issue": "3",
        "journal": "BMJ Health & Care Informatics",
        "pages": undefined,
        "placeOfPublication": undefined,
        "publisher": undefined,
        "repository": undefined,
        "thesisType": undefined,
        "title": "U-Convolutional Networks for Biomedical Image Segmentation",
        "url": undefined,
        "volume": "27",
        "year": "2020",
      },
      "referenceType": "journal",
      "reportEngineSnapshot": {
        "engineVersion": "v2",
        "extractorPath": "deterministic",
        "processingPath": {
          "partialReasons": undefined,
          "partialResult": false,
        },
        "qualityFlags": [
          "review",
          "protected_token_corruption",
        ],
        "splitContaminationFlags": undefined,
        "stageLogSummary": undefined,
        "truthProvenance": {
          "truthApplied": false,
        },
        "validationCodes": [
          "protected_title_token_corrupted",
        ],
      },
      "review": {
        "assertionHighlights": undefined,
        "assertionSummary": undefined,
        "authorInitialsOnly": true,
        "authorityStatus": "none",
        "confidence": {
          "breakdown": {
            "rules": 33,
          },
          "isSuspicious": false,
          "score": 33,
        },
        "healthReasons": [
          "Protected title or venue tokens were corrupted.",
        ],
        "healthState": "action_needed",
        "styleDetectionFailed": false,
        "truthProvenance": {
          "truthApplied": false,
        },
      },
      "styleDetectionFailed": false,
      "truthProvenance": {
        "truthApplied": false,
      },
      "warnings": [
        "error:protected_title_token_corrupted",
      ],
    },
  },
]
`;
